added text content

--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
   </head>
   <body>
-    <h1>hello, world</h1>
+    <div>
+      <div>
+        <h6>About</h6>
+        <h6>Team</h6>
+      </div>
+      <div>
+        <h1 id="heading">What's next for real time conversation?</h1>
+      </div>
+      <div>
+        <h4 id="sub-heading">We are heads down on building this product towards an early alpha launch in Q2 2023.</h4>
+        <h4 id="sub-heading">Reserve your handle, share this page and follow us.</h4>
+      </div>
+      <div>
+        <form>
+          <input class="name-email" type="text" name="name" placeholder="Name">
+          <input class="name-email" type="text" name="email" placeholder="Email">
+          <br />
+          <input class="handle" type="text" name="handle" placeholder="Handle">
+          <br />
+          By entering the above information you are agreeing to receive emails from or on behalf of SPECIAL OFFER.
+          <input class="submit-button" type="submit" value="Submit"> 
+        </form>
+      </div>
+    </div>
   </body>
 </html>
