--- a/index.html
+++ b/index.html
@@ -10,28 +10,31 @@
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
   </head>
   <body>
-    <div>
-      <div>
-        <h6>About</h6>
-        <h6>Team</h6>
-      </div>
-      <div>
-        <h1 id="heading">What's next for real time conversation?</h1>
-      </div>
-      <div>
-        <h4 id="sub-heading">We are heads down on building this product towards an early alpha launch in Q2 2023.</h4>
-        <h4 id="sub-heading">Reserve your handle, share this page and follow us.</h4>
-      </div>
-      <div>
-        <form>
-          <input class="name-email" type="text" name="name" placeholder="Name">
-          <input class="name-email" type="text" name="email" placeholder="Email">
-          <br />
-          <input class="handle" type="text" name="handle" placeholder="Handle">
-          <br />
-          By entering the above information you are agreeing to receive emails from or on behalf of SPECIAL OFFER.
-          <input class="submit-button" type="submit" value="Submit"> 
-        </form>
+    <div id="group-10">
+      <!-- <div id="group-7"> -->
+        <div>
+          <h6>About</h6>
+          <h6>Team</h6>
+        </div>
+        <div id="group-6">
+          <h1 id="heading">What's next for real time conversation?</h1>
+        </div>
+        <div id="sub-heading">
+          <h4>We are heads down on building this product towards an early alpha launch in Q2 2023.</h4>
+          <h4>Reserve your handle, share this page and follow us.</h4>
+        </div>
+        <div>
+          <form id="my-form">
+            <input class="name-email" type="text" name="name" placeholder="Name">
+            <input class="name-email" type="text" name="email" placeholder="Email">
+            <br />
+            <input class="handle" type="text" name="handle" placeholder="Handle">
+            <br />
+            By entering the above information you are agreeing to receive emails from or on behalf of SPECIAL OFFER.
+            <br />
+            <input class="submit-button" type="submit" value="Submit"> 
+          </form>
+        <!-- </div> -->
       </div>
     </div>
   </body>
