form styled with css, need to get first 2 inputs on same line

--- a/index.html
+++ b/index.html
@@ -10,32 +10,42 @@
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
   </head>
   <body>
-    <div id="group-10">
-      <!-- <div id="group-7"> -->
+    <!-- <div id="group-10"> -->
+      <div id="group-7">
         <div>
+          <!-- ARE THESE SUPPOSED TO BE VISIBLE? -->
           <h6>About</h6>
           <h6>Team</h6>
         </div>
-        <div id="group-6">
+        <!-- <div id="group-6"> -->
           <h1 id="heading">What's next for real time conversation?</h1>
-        </div>
+        <!-- </div> -->
         <div id="sub-heading">
           <h4>We are heads down on building this product towards an early alpha launch in Q2 2023.</h4>
           <h4>Reserve your handle, share this page and follow us.</h4>
         </div>
         <div>
           <form id="my-form">
-            <input class="name-email" type="text" name="name" placeholder="Name">
-            <input class="name-email" type="text" name="email" placeholder="Email">
+            <div class="input-container">
+              <label for="name-email">Name</label>
+              <input id="name-email" type="text" name="name">
+            </div>
+            <div class="input-container">
+              <label for="name-email">Email</label>
+              <input id="name-email" type="text" name="email">
+            </div>
             <br />
-            <input class="handle" type="text" name="handle" placeholder="Handle">
+            <div class="input-container">
+              <label for="handle">Handle</label>
+              <input id="handle" type="text" name="handle">
+            </div>
             <br />
             By entering the above information you are agreeing to receive emails from or on behalf of SPECIAL OFFER.
             <br />
             <input class="submit-button" type="submit" value="Submit"> 
           </form>
-        <!-- </div> -->
-      </div>
+        </div>
+      <!-- </div> -->
     </div>
   </body>
 </html>
