added css specs for elements, need to fix padding, spacing and adjust font

--- a/index.html
+++ b/index.html
@@ -10,28 +10,37 @@
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
   </head>
   <body>
-    <!-- <div id="group-10"> -->
       <div id="group-7">
-        <div>
-          <!-- ARE THESE SUPPOSED TO BE VISIBLE? -->
-          <h6>About</h6>
-          <h6>Team</h6>
+        <!-- ARE THESE SUPPOSED TO BE VISIBLE? -->
+        <!-- <div>
+          About
+          Team
+        </div> -->
+        <div id="group-6">
+          What's next 
+          <br />
+          for real time conversation?
         </div>
-        <!-- <div id="group-6"> -->
-          <h1 id="heading">What's next for real time conversation?</h1>
-        <!-- </div> -->
+        <br />
         <div id="sub-heading">
-          <h4>We are heads down on building this product towards an early alpha launch in Q2 2023.</h4>
-          <h4>Reserve your handle, share this page and follow us.</h4>
+          We are heads down on building this product 
+          <br />
+          towards an early alpha launch in Q2 2023.
+          <br />
+          <br />
+          Reserve your handle, share this page and follow us.
         </div>
+        <br />
         <div>
           <form id="my-form">
             <div class="input-container">
               <label for="name-email">Name</label>
+              <input type="text" class="outerInput">
               <input id="name-email" type="text" name="name">
             </div>
             <div class="input-container">
               <label for="name-email">Email</label>
+              <input type="text" class="outerInput">
               <input id="name-email" type="text" name="email">
             </div>
             <br />
@@ -39,13 +48,15 @@
               <label for="handle">Handle</label>
               <input id="handle" type="text" name="handle">
             </div>
+            <div id="fine-print">
+              By entering the above information you are agreeing to receive  
+              <br />
+              emails from or on behalf of SPECIAL OFFER.
+            </div>
             <br />
-            By entering the above information you are agreeing to receive emails from or on behalf of SPECIAL OFFER.
-            <br />
-            <input class="submit-button" type="submit" value="Submit"> 
+            <button class="submit-button" type="submit">Submit</button>
           </form>
         </div>
-      <!-- </div> -->
-    </div>
+      </div>
   </body>
 </html>
