added favicon, got form inputs on same line, need to fix spacing underneath handle and before submit

--- a/index.html
+++ b/index.html
@@ -5,18 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="index.js" charset="UTF-8"></script>
     <link rel="stylesheet" href="index.css">
-    <title>SPECIAL OFFER</title>
-    <!-- ADD FAVICON BELOW -->
-    <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
+    <title>SPECIAL OFFER, Inc.</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   </head>
   <body>
-      <div id="group-7">
-        <!-- ARE THESE SUPPOSED TO BE VISIBLE? -->
-        <!-- <div>
-          About
-          Team
-        </div> -->
-        <div id="group-6">
+      <div id="main">
+        <div id="heading">
           What's next 
           <br />
           for real time conversation?
@@ -30,23 +24,15 @@
           <br />
           Reserve your handle, share this page and follow us.
         </div>
-        <br />
         <div>
           <form id="my-form">
             <div class="input-container">
-              <label for="name-email">Name</label>
-              <input type="text" class="outerInput">
-              <input id="name-email" type="text" name="name">
+              <input class="name-email" type="text" name="name" placeholder="Name">
+              <input class="name-email" type="text" name="email" placeholder="Email">
             </div>
+            <div class="input-gap"></div>
             <div class="input-container">
-              <label for="name-email">Email</label>
-              <input type="text" class="outerInput">
-              <input id="name-email" type="text" name="email">
-            </div>
-            <br />
-            <div class="input-container">
-              <label for="handle">Handle</label>
-              <input id="handle" type="text" name="handle">
+              <input id="handle" type="text" name="handle" placeholder="Handle">
             </div>
             <div id="fine-print">
               By entering the above information you are agreeing to receive  
