added finishing css touches, cleaned up comments in code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
           <br />
           for real time conversation?
         </div>
-        <br />
         <div id="sub-heading">
           We are heads down on building this product 
           <br />
@@ -26,12 +25,11 @@
         </div>
         <div>
           <form id="my-form">
-            <div class="input-container">
+            <div id="name-email-container">
               <input class="name-email" type="text" name="name" placeholder="Name">
               <input class="name-email" type="text" name="email" placeholder="Email">
             </div>
-            <div class="input-gap"></div>
-            <div class="input-container">
+            <div id="handle-container">
               <input id="handle" type="text" name="handle" placeholder="Handle">
             </div>
             <div id="fine-print">
@@ -39,8 +37,7 @@
               <br />
               emails from or on behalf of SPECIAL OFFER.
             </div>
-            <br />
-            <button class="submit-button" type="submit">Submit</button>
+            <button id="submit-button" type="submit">Submit</button>
           </form>
         </div>
       </div>
